--- a/GreenScape AI/package.json
+++ b/GreenScape AI/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.447.0",
     "react": "^18.3.1",
     "react-compare-image": "^3.4.0",
+    "react-compare-slider": "^3.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
