--- a/GreenScape AI/package.json
+++ b/GreenScape AI/package.json
@@ -13,6 +13,7 @@
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
+    "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "framer-motion": "^11.10.0",
     "lucide-react": "^0.447.0",
